# rag-youtube

./: main.py  pyproject.toml  rag_utilities.py  requirements.txt
